--- a/src/FORMS/Pagos_opciones.form
+++ b/src/FORMS/Pagos_opciones.form
@@ -62,7 +62,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButton3" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButton2" min="-2" pref="37" max="-2" attributes="0"/>
+                  <Component id="jButton_salir" min="-2" pref="37" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -73,7 +73,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jButton3" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
-                      <Component id="jButton2" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
+                      <Component id="jButton_salir" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
                       <Component id="jButton_borrar" alignment="1" pref="0" max="32767" attributes="0"/>
                       <Component id="jButton4" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -95,7 +95,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="jButton_salir">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/Imagenes/exit1.png"/>
@@ -104,7 +104,7 @@
             <Property name="toolTipText" type="java.lang.String" value="Alt + X"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_salirActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton_borrar">
